[gd_scene load_steps=4 format=3 uid="uid://sr4y1oyytuw0"]

[ext_resource type="Script" path="res://scenes/weather.gd" id="1_axupe"]
[ext_resource type="Texture2D" uid="uid://bjc1f037olydu" path="res://assets/rain.png" id="1_qx773"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5aa7v"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(220, 1, 1)
gravity = Vector3(0, 98, 0)

[node name="weather" type="CanvasLayer"]
script = ExtResource("1_axupe")

[node name="rain_colour" type="CanvasModulate" parent="."]
color = Color(0.721569, 1, 1, 0.631373)

[node name="rain" type="GPUParticles2D" parent="."]
position = Vector2(201, 0)
amount = 200
process_material = SubResource("ParticleProcessMaterial_5aa7v")
texture = ExtResource("1_qx773")
lifetime = 2.2
speed_scale = 0.8
randomness = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.195545, 0.195545, 0.195545, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="changed" from="." to="." method="_update_weather"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
